Locale file updates.

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -19,7 +19,7 @@ Archery.Combat.SkillshotBonus=[[RED]]Bonusov\u00e9 zran\u011bn\u00ed p\u0159esn\
 Archery.Effect.0=P\u0159esn\u00e1 trefa
 Archery.Effect.1=Zv\u00fd\u0161en\u00e9 po\u0161kozen\u00ed lukem
 Archery.Effect.2=Om\u00e1men\u00ed (Hr\u00e1\u010di)
-Archery.Effect.3=Dezorientuje nepratele a zpusobi 4 DMG
+Archery.Effect.3=Disorients foes and deals {0} DMG
 Archery.Effect.4=Sb\u011br \u0161\u00edp\u016f
 Archery.Effect.5=\u0160ance na navr\u00e1cen\u00ed \u0161\u00edp\u016f z mrtvol.
 Archery.Listener=Lukostrelba
@@ -94,7 +94,7 @@ Fishing.MagicFound=[[GRAY]]C\u00edt\u00edte dotek magie s t\u00edmto \u00falovke
 Fishing.SkillName=RYBARENI
 Fishing.Skillup=[[YELLOW]]Dovednost v rybareni byla navysena o {0}. Celkem ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]\u0160ance na dvojn\u00e1sobn\u00fd zisk: [[YELLOW]]{0}
-Herbalism.Ability.FD=[[RED]]Farm\u00e1\u0159\u016fv apetit: [[YELLOW]]Rank {0}
+Herbalism.Ability.FD=[[RED]]Farmer\'\'s Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]D\u00e9lka trv\u00e1n\u00ed Zelen\u00e9 planety: [[YELLOW]]{0}s
 Herbalism.Ability.GTe.NeedMore=[[RED]]You need more seeds to spread Green Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]\u0160ance na dovednost Zahradn\u00edk: [[YELLOW]]{0}
@@ -223,11 +223,11 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]Zasa\u017een proti\u00fatokem!
 Swords.Combat.Countered=[[GREEN]]**PROTIUTOK**
 Swords.Combat.SS.Struck=[[DARK_RED]]Zasazen Hrozivym utokem!
 Swords.Effect.0=Protiutok
-Swords.Effect.1=Odra\u017e 50% zran\u011bn\u00ed
+Swords.Effect.1=Reflect {0} of damage taken
 Swords.Effect.2=Hrozivy utok (SCHOPNOST)
-Swords.Effect.3=25% zraneni AoE, Krvaceni+ AoE
+Swords.Effect.3={0} DMG AoE, Bleed+ AoE
 Swords.Effect.4=Hrozivy utok krvaceni+
-Swords.Effect.5=Krvaceni po dobu 5 ticku
+Swords.Effect.5={0} Tick Bleed
 Swords.Effect.6=Krv\u00e1cen\u00ed
 Swords.Effect.7=Aplikuj krv\u00e1cejic\u00ed DoTku
 Swords.Listener=Mece:
@@ -242,13 +242,13 @@ Swords.SS.Length=[[RED]]D\u00e9lka Hroziv\u00e9ho \u00datoku: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Ekologicky informovane
 Taming.Ability.Bonus.1=Vlci, vyhn\u011bte se nebezpe\u010d\u00ed
 Taming.Ability.Bonus.2=Husta srst
-Taming.Ability.Bonus.3=1/2 Zran\u011bn\u00ed, odolnost proti ohni
+Taming.Ability.Bonus.3=1/{0} Damage, Fire Resistance
 Taming.Ability.Bonus.4=Otresuvzdorny
-Taming.Ability.Bonus.5=V\u00fdbu\u0161niny d\u00e1vaj\u00ed 1/6 norm\u00e1ln\u00edho zran\u011bn\u00ed
+Taming.Ability.Bonus.5=Explosives do 1/{0} normal damage
 Taming.Ability.Bonus.6=Nabrousene drapy
-Taming.Ability.Bonus.7=+2 Zraneni
+Taming.Ability.Bonus.7=+{0} Damage
 Taming.Ability.Bonus.8=Rychl\u00e9 Ob\u010derstven\u00ed
-Taming.Ability.Bonus.9={0}% Chance for heal on attack
+Taming.Ability.Bonus.9={0} Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
@@ -285,6 +285,7 @@ Unarmed.Ability.Bonus.0=Styl \u017eelezn\u00e9 pa\u017ee
 Unarmed.Ability.Bonus.1=+{0} Zv\u00fd\u0161en\u00ed zran\u011bn\u00ed
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]\u0160ance na vych\u00edlen\u00ed \u0161\u00edpu: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]\u0160ance na odzbrojen\u00ed: [[YELLOW]]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]Your opponent has an iron grip!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being disarmed!
 Unarmed.Ability.Lower=[[GRAY]]**SKL\u00c1N\u00cd\u0160 SV\u00c9 P\u011aSTI**
@@ -297,6 +298,8 @@ Unarmed.Effect.4=Styl \u017eelezn\u00e9 pa\u017ee
 Unarmed.Effect.5=Na \u010das ti zatvrd\u00ed ruku
 Unarmed.Effect.6=Vych\u00fdlen\u00ed \u0161\u00edpu
 Unarmed.Effect.7=Odrazeni sipu
+Unarmed.Effect.8=Iron Grip
+Unarmed.Effect.9=Prevents you from being disarmed
 Unarmed.Listener=Neozbrojeny:
 Unarmed.SkillName=NEOZBROJENY
 Unarmed.Skills.Berserk.Off=[[RED]]**Besneni bylo deaktivovano**
