--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -19,7 +19,7 @@ Archery.Combat.SkillshotBonus=[[RED]]Kunstschuss Zusatzschaden: [[YELLOW]]{0}
 Archery.Effect.0=Kunstschuss
 Archery.Effect.1=Erh\u00f6ht Schaden vom Bogen
 Archery.Effect.2=Bet\u00e4ubung (Spieler)
-Archery.Effect.3=Verwirrt Feinde und verursacht 4 Schaden
+Archery.Effect.3=Disorients foes and deals {0} DMG
 Archery.Effect.4=Pfeil-R\u00fcckgewinnung
 Archery.Effect.5=Chance auf Pfeil-R\u00fcckgewinnung von Leichen
 Archery.Listener=Bogen:
@@ -94,7 +94,7 @@ Fishing.MagicFound=[[AQUA]]Dich ber\u00fchrt ein leichter Zauber bei diesem Fang
 Fishing.SkillName=ANGELN
 Fishing.Skillup=[[YELLOW]]Angel Skill um {0} gestiegen. Gesamt ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Chance auf Doppel-Drops: [[YELLOW]]{0}
-Herbalism.Ability.FD=[[RED]]Bauernfr\u00fchst\u00fcck Rang:[[YELLOW]] {0}
+Herbalism.Ability.FD=[[RED]]Farmer\'\'s Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Gr\u00fcnes Land Dauer: [[YELLOW]]{0}s
 Herbalism.Ability.GTe.NeedMore=[[RED]]You need more seeds to spread Green Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]Gr\u00fcner Daumen Chance: [[YELLOW]]{0}
@@ -223,11 +223,11 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]Treffer durch Gegenangriff!
 Swords.Combat.Countered=[[GREEN]]**GEGENANGRIFF**
 Swords.Combat.SS.Struck=[[DARK_RED]]Getroffen von S\u00c4GEZAHNSCHLAG!
 Swords.Effect.0=Gegenangriff
-Swords.Effect.1=Reflektiert 50% des erhaltenen Schadens
+Swords.Effect.1=Reflect {0} of damage taken
 Swords.Effect.2=S\u00e4gezahnschlag (F\u00e4higkeit)
-Swords.Effect.3=25% Umgebungsschaden, Blutung+
+Swords.Effect.3={0} DMG AoE, Bleed+ AoE
 Swords.Effect.4=S\u00e4gezahnschlag, Blutung+
-Swords.Effect.5=5 Ticks Blutung
+Swords.Effect.5={0} Tick Bleed
 Swords.Effect.6=Blutung
 Swords.Effect.7=Verursacht Blutungsschaden \u00fcber Zeit (DoT)
 Swords.Listener=Schwert:
@@ -242,13 +242,13 @@ Swords.SS.Length=[[RED]]S\u00e4gezahnschlag Dauer: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Umweltbewusst
 Taming.Ability.Bonus.1=W\u00f6lfe weichen Gefahren aus
 Taming.Ability.Bonus.2=Dicker Pelz
-Taming.Ability.Bonus.3=Halber Schaden, Feuer-Resistent
+Taming.Ability.Bonus.3=1/{0} Damage, Fire Resistance
 Taming.Ability.Bonus.4=Schock-Sicher
-Taming.Ability.Bonus.5=Explosionen verursachen 1/6 Schaden
+Taming.Ability.Bonus.5=Explosives do 1/{0} normal damage
 Taming.Ability.Bonus.6=Gesch\u00e4rfte Krallen
-Taming.Ability.Bonus.7=+2 Schaden
+Taming.Ability.Bonus.7=+{0} Damage
 Taming.Ability.Bonus.8=Schnell-Imbiss
-Taming.Ability.Bonus.9={0}% Chance auf Heilung bei Attacke
+Taming.Ability.Bonus.9={0} Chance for heal on attack
 Taming.Ability.Locked.0=GESPERRT bis Skill {0}+ (Umweltbewusst)
 Taming.Ability.Locked.1=GESPERRT bis Skill {0}+ (Dicker Pelz)
 Taming.Ability.Locked.2=GESPERRT bis Skill {0}+ (Schock-Sicher)
@@ -285,6 +285,7 @@ Unarmed.Ability.Bonus.0=Eiserner Arm
 Unarmed.Ability.Bonus.1=+{0} Schadens-Bonus
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Pfeile ablenken Chance: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]Entwaffnen Chance: [[YELLOW]]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]Your opponent has an iron grip!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being disarmed!
 Unarmed.Ability.Lower=[[GRAY]]**Du senkst deine F\u00c4USTE**
@@ -297,6 +298,8 @@ Unarmed.Effect.4=Eiserner Arm
 Unarmed.Effect.5=Verh\u00e4rtet deinen Arm einige Zeit
 Unarmed.Effect.6=Pfeil-Ablenkung
 Unarmed.Effect.7=Lenkt Pfeile ab
+Unarmed.Effect.8=Iron Grip
+Unarmed.Effect.9=Prevents you from being disarmed
 Unarmed.Listener=Unbewaffnet:
 Unarmed.SkillName=UNBEWAFFNET
 Unarmed.Skills.Berserk.Off=[[RED]]**Berserker ausgelaufen**
