--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -19,7 +19,7 @@ Archery.Combat.SkillshotBonus=[[RED]]Da\u00f1o bonus por Habilidad de Tiro: [[YE
 Archery.Effect.0=Habilidad de Tiro
 Archery.Effect.1=Incrementar da\u00f1o hecho con arcos
 Archery.Effect.2=Aturdir (Jugadores)
-Archery.Effect.3=Desorienta a los enemigos y saca 4 corazones de da\u00f1o
+Archery.Effect.3=Disorients foes and deals {0} DMG
 Archery.Effect.4=Recuperaci\u00f3n de Flecha
 Archery.Effect.5=Probabilidad de recuperar flechas de los cadaveres
 Archery.Listener=Arquer\u00eda: 
@@ -94,7 +94,7 @@ Fishing.MagicFound=[[GRAY]]Sientes un toque de magia con esta pesca...
 Fishing.SkillName=PESCADOR
 Fishing.Skillup=[[YELLOW]]Habilidad de Pescador incrementada en {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}
-Herbalism.Ability.FD=[[RED]]Dieta del Granjero: [[YELLOW]]Rango {0}
+Herbalism.Ability.FD=[[RED]]Farmer\'\'s Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Duraci\u00f3n de Tierra Verde: [[YELLOW]]{0}seg
 Herbalism.Ability.GTe.NeedMore=[[RED]]You need more seeds to spread Green Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]Probabilidad de Pulgar Verde: [[YELLOW]]{0}
@@ -223,11 +223,11 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]\u00a1Alcanzado por un contra ataque!
 Swords.Combat.Countered=[[GREEN]]**CONTRA-ATACADO**
 Swords.Combat.SS.Struck=[[DARK_RED]]\u00a1Golpeado por ATAQUE DENTADO!
 Swords.Effect.0=Contra Ataque
-Swords.Effect.1=Reflejar el 50% del da\u00f1o recibido
+Swords.Effect.1=Reflect {0} of damage taken
 Swords.Effect.2=Ataque Dentado (HABILIDAD)
-Swords.Effect.3=25% de da\u00f1o y Sangrado+ en el \u00e1rea de cobertura
+Swords.Effect.3={0} DMG AoE, Bleed+ AoE
 Swords.Effect.4=Ataque Dentado Sangriento+
-Swords.Effect.5=Sangrado de 5 Ticks
+Swords.Effect.5={0} Tick Bleed
 Swords.Effect.6=Sangrado
 Swords.Effect.7=Aplicar sangrado que da\u00f1a con el tiempo
 Swords.Listener=Espadas: 
@@ -242,13 +242,13 @@ Swords.SS.Length=[[RED]]Duraci\u00f3n del Ataque Dentado: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Consciente del Entorno
 Taming.Ability.Bonus.1=Lobos evitan peligros
 Taming.Ability.Bonus.2=Piel Gruesa
-Taming.Ability.Bonus.3=1/2 Da\u00f1o, Resistencia al Fuego
+Taming.Ability.Bonus.3=1/{0} Damage, Fire Resistance
 Taming.Ability.Bonus.4=A Prueba de Golpes
-Taming.Ability.Bonus.5=Explosivos hacen 1/6 del da\u00f1o normal
+Taming.Ability.Bonus.5=Explosives do 1/{0} normal damage
 Taming.Ability.Bonus.6=Garras Afiladas
-Taming.Ability.Bonus.7=+2 de Da\u00f1o
+Taming.Ability.Bonus.7=+{0} Damage
 Taming.Ability.Bonus.8=Servicio de Comida R\u00e1pida
-Taming.Ability.Bonus.9={0}% Chance for heal on attack
+Taming.Ability.Bonus.9={0} Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
@@ -285,6 +285,7 @@ Unarmed.Ability.Bonus.0=Estilo del Pu\u00f1o de Hierro
 Unarmed.Ability.Bonus.1=+{0} Mejora de DA\u00d1O
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Probabilidad de Desviar Flechas: [[YELLOW]]{0}%
 Unarmed.Ability.Chance.Disarm=[[RED]]Probabilidad de Desarmar: [[YELLOW]]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]Your opponent has an iron grip!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being disarmed!
 Unarmed.Ability.Lower=[[GRAY]]**BAJAS TUS PU\u00d1OS**
@@ -297,6 +298,8 @@ Unarmed.Effect.4=Estilo del Pu\u00f1o de Hierro
 Unarmed.Effect.5=Endurece su brazo con el tiempo
 Unarmed.Effect.6=Flecha Desviada
 Unarmed.Effect.7=Desviar flechas
+Unarmed.Effect.8=Iron Grip
+Unarmed.Effect.9=Prevents you from being disarmed
 Unarmed.Listener=Desarmado: 
 Unarmed.SkillName=DESARMADO
 Unarmed.Skills.Berserk.Off=[[RED]]**Enloquecido ha expirado**
