--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -19,7 +19,7 @@ Archery.Combat.SkillshotBonus=[[RED]]Bonus al Danno di Tiro da Maestro: [[YELLOW
 Archery.Effect.0=Tiro da Maestro
 Archery.Effect.1=Aumenta il danno fatto con gli archi
 Archery.Effect.2=Stordire (Giocatori)
-Archery.Effect.3=Disorienta i nemici e infligge 4 danni
+Archery.Effect.3=Disorients foes and deals {0} DMG
 Archery.Effect.4=Recupero Frecce
 Archery.Effect.5=Probabilit\u00e0 di recuperare frecce dai cadaveri
 Archery.Listener=Tiro con l\'Arco:
@@ -94,14 +94,14 @@ Fishing.MagicFound=[[GRAY]]Senti un tocco di magia in questa cattura...
 Fishing.SkillName=PESCA
 Fishing.Skillup=[[YELLOW]]L\'abilit\u00e0 Pesca \u00e8 aumentata di {0}. Totale ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Possibilit\u00e0 di Doppio Drop: [[YELLOW]]{0}
-Herbalism.Ability.FD=[[RED]]Dieta del Contadino: [[YELLOW]]Grado {0}
+Herbalism.Ability.FD=[[RED]]Farmer\'\'s Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Durata di Terra Verde: [[YELLOW]]{0}s
 Herbalism.Ability.GTe.NeedMore=[[RED]]Ti servono pi\u00f9 semi per diffondere Terra Verde.
 Herbalism.Ability.GTh.Chance=[[RED]]Possibilit\u00e0 di Pollice Verde: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**POLLICE VERDE FALLITO**
 Herbalism.Ability.GTh.Stage=[[RED]]Stadio di Pollice Verde: [[YELLOW]] Il raccolto cresce allo stadio {0}
 Herbalism.Ability.GTh=[[GREEN]]**POLLICE VERDE**
-Herbalism.Ability.HylianLuck=[[RED]]Hylian Luck Chance: [[YELLOW]]{0}
+Herbalism.Ability.HylianLuck=[[RED]]Probabilit\u00e0 di Fotruna Hylian: [[YELLOW]]{0}
 Herbalism.Ability.Lower=[[GRAY]]**ABBASSI LA ZAPPA**
 Herbalism.Ability.Ready=[[GREEN]]**PREPARI LA ZAPPA**
 Herbalism.Effect.0=TERRA VERDE (CAPACIT\u00c0)
@@ -114,9 +114,9 @@ Herbalism.Effect.6=Dieta del Contadino
 Herbalism.Effect.7=Aumenta la fame recuperata tramite cibi coltivati
 Herbalism.Effect.8=Doppi Drop (Ogni Pianta)
 Herbalism.Effect.9=Raddoppia il normale drop
-Herbalism.Effect.10=Hylian Luck
-Herbalism.Effect.11=Gives a small chance of finding rare items
-Herbalism.HylianLuck=[[GREEN]]The luck of Hyrule is with you today!
+Herbalism.Effect.10=Fortuna Hylian
+Herbalism.Effect.11=D\u00e0 una modesta possibilit\u00e0 di trovare oggetti rari
+Herbalism.HylianLuck=[[GREEN]]Oggi la fortuna di Hyrule \u00e8 con te!
 Herbalism.Listener=Erboristeria: 
 Herbalism.SkillName=ERBORISTERIA
 Herbalism.Skills.GTe.Off=[[RED]]**Terra Verde si \u00e8 esaurita**
@@ -223,11 +223,11 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]Colpisci on un contrattacco!
 Swords.Combat.Countered=[[GREEN]]**CONTRATTACCATO**
 Swords.Combat.SS.Struck=[[DARK_RED]]Colpito da COLPI SEGHETTATI!
 Swords.Effect.0=Contrattacco
-Swords.Effect.1=Riflette il 50% del danno subito
+Swords.Effect.1=Reflect {0} of damage taken
 Swords.Effect.2=Colpi Seghettati (CAPACITA\')
-Swords.Effect.3=+25% Danno ad Area, Emorragia+ ad Area
+Swords.Effect.3={0} DMG AoE, Bleed+ AoE
 Swords.Effect.4=Colpi Seghettati Emorragia+
-Swords.Effect.5=Emorragia da 5 Tick
+Swords.Effect.5={0} Tick Bleed
 Swords.Effect.6=Emorragia
 Swords.Effect.7=Infligge danno ciclico da sanguinamento
 Swords.Listener=Spade:
@@ -242,11 +242,11 @@ Swords.SS.Length=[[RED]]Durata di Colpi Seghettati: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Sicurezza Ambientale
 Taming.Ability.Bonus.1=I lupi evitano il pericolo
 Taming.Ability.Bonus.2=Pelliccia Folta
-Taming.Ability.Bonus.3=1/2 Danno, Resistenza al Fuoco
+Taming.Ability.Bonus.3=1/{0} Damage, Fire Resistance
 Taming.Ability.Bonus.4=A Prova d\'Urto
-Taming.Ability.Bonus.5=Gli esplosivi fanno 1/6 del normale danno
+Taming.Ability.Bonus.5=Explosives do 1/{0} normal damage
 Taming.Ability.Bonus.6=Artigli Affilati
-Taming.Ability.Bonus.7=+2 al Danno
+Taming.Ability.Bonus.7=+{0} Damage
 Taming.Ability.Bonus.8=Servizio Fast Food
 Taming.Ability.Bonus.9={0}% Probabilit\u00e0 di guarire quando si attacca
 Taming.Ability.Locked.0=BLOCCATO FINO AD ABILIT\u00c0 {0}+ (SICUREZZA AMBIENTALE)
@@ -285,6 +285,7 @@ Unarmed.Ability.Bonus.0=Stile del Braccio di Ferro
 Unarmed.Ability.Bonus.1=Potenziamento Danno +{0}
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Possibilit\u00e0 di Deviare Freccia: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]Possibilit\u00e0 di Disarmare: [[YELLOW]]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]Il tuo avversario ha una presa di ferro!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]La tua presa di ferro ha evitato che venissi disarmato!
 Unarmed.Ability.Lower=[[GRAY]]**ABBASSI I PUGNI**
@@ -297,6 +298,8 @@ Unarmed.Effect.4=Stile del Braccio di Ferro
 Unarmed.Effect.5=Ti indurisce il braccio col passare del tempo
 Unarmed.Effect.6=Deviare Frecce
 Unarmed.Effect.7=Deviare frecce
+Unarmed.Effect.8=Iron Grip
+Unarmed.Effect.9=Prevents you from being disarmed
 Unarmed.Listener=Lotta:
 Unarmed.SkillName=LOTTA
 Unarmed.Skills.Berserk.Off=[[RED]]**Furore si \u00e8 esaurito**
