--- a/src/main/resources/locale/locale_lv.properties
+++ b/src/main/resources/locale/locale_lv.properties
@@ -19,7 +19,7 @@ Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
 Archery.Effect.0=Skill Shot
 Archery.Effect.1=Increases damage done with bows
 Archery.Effect.2=Daze (Players)
-Archery.Effect.3=Disorients foes and deals 4 DMG
+Archery.Effect.3=Disorients foes and deals {0} DMG
 Archery.Effect.4=Arrow Retrieval
 Archery.Effect.5=Chance to retrieve arrows from corpses
 Archery.Listener=Archery:
@@ -94,7 +94,7 @@ Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Fishing.SkillName=FISHING
 Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
-Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
+Herbalism.Ability.FD=[[RED]]Farmer\'\'s Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
 Herbalism.Ability.GTe.NeedMore=[[RED]]You need more seeds to spread Green Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
@@ -223,11 +223,11 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]Hit with a counter-attack!
 Swords.Combat.Countered=[[GREEN]]**COUNTER-ATTACKED**
 Swords.Combat.SS.Struck=[[DARK_RED]]Struck by SERRATED STRIKES!
 Swords.Effect.0=Pretsitiens 
-Swords.Effect.1=Reflect 50% of damage taken
+Swords.Effect.1=Reflect {0} of damage taken
 Swords.Effect.2=Serrated Strikes (ABILITY)
-Swords.Effect.3=25% DMG AoE, Bleed+ AoE
+Swords.Effect.3={0} DMG AoE, Bleed+ AoE
 Swords.Effect.4=Serrated Strikes Bleed+
-Swords.Effect.5=5 Tick Bleed
+Swords.Effect.5={0} Tick Bleed
 Swords.Effect.6=Bleed
 Swords.Effect.7=Apply a bleed DoT
 Swords.Listener=Swords:
@@ -242,13 +242,13 @@ Swords.SS.Length=[[RED]]Serrated Strikes Length: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Environmentally Aware
 Taming.Ability.Bonus.1=Wolves avoid danger
 Taming.Ability.Bonus.2=Thick Fur
-Taming.Ability.Bonus.3=1/2 Damage, Fire Resistance
+Taming.Ability.Bonus.3=1/{0} Damage, Fire Resistance
 Taming.Ability.Bonus.4=Shock Proof
-Taming.Ability.Bonus.5=Explosives do 1/6 normal damage
+Taming.Ability.Bonus.5=Explosives do 1/{0} normal damage
 Taming.Ability.Bonus.6=Sharpened Claws
-Taming.Ability.Bonus.7=+2 Damage
+Taming.Ability.Bonus.7=+{0} Damage
 Taming.Ability.Bonus.8=\u0100tro \u0112dienu Pakalpojumi 
-Taming.Ability.Bonus.9={0}% Chance for heal on attack
+Taming.Ability.Bonus.9={0} Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
@@ -285,6 +285,7 @@ Unarmed.Ability.Bonus.0=Iron Arm Style
 Unarmed.Ability.Bonus.1=+{0} DMG Upgrade
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]Your opponent has an iron grip!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being disarmed!
 Unarmed.Ability.Lower=[[GRAY]]**YOU LOWER YOUR FISTS**
@@ -297,6 +298,8 @@ Unarmed.Effect.4=Iron Arm Style
 Unarmed.Effect.5=Hardens your arm over time
 Unarmed.Effect.6=Arrow Deflect
 Unarmed.Effect.7=Deflect arrows
+Unarmed.Effect.8=Iron Grip
+Unarmed.Effect.9=Prevents you from being disarmed
 Unarmed.Listener=Unarmed:
 Unarmed.SkillName=NEAPBRU\u0145OTS
 Unarmed.Skills.Berserk.Off=[[RED]]**Berserk has worn off**
