--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -19,7 +19,7 @@ Archery.Combat.SkillshotBonus=[[RED]]Skyde Evne Bonus Skade: [[YELLOW]]{0}
 Archery.Effect.0=Evne Skud
 Archery.Effect.1=For\u00f8ger skade for\u00e5rsaget med buer
 Archery.Effect.2=Lam (Spillere)
-Archery.Effect.3=Desorienterer angribere og skader 4 liv
+Archery.Effect.3=Disorients foes and deals {0} DMG
 Archery.Effect.4=Genbrug Pile
 Archery.Effect.5=Chance for at tage pile ud af lig
 Archery.Listener=Bueskydning:
@@ -94,7 +94,7 @@ Fishing.MagicFound=[[GRAY]]Du f\u00f8ler et strejf a magi med denne fangst...
 Fishing.SkillName=FISKER
 Fishing.Skillup=[[YELLOW]]Fisker evne for\u00f8get med {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]2x Tabs Chance: [[YELLOW]]{0}
-Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
+Herbalism.Ability.FD=[[RED]]Farmer\'\'s Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Gr\u00f8n Terra L\u00e6ngde: [[YELLOW]]{0}s
 Herbalism.Ability.GTe.NeedMore=[[RED]]Du mangler flere fr\u00f8 for at sprede Gr\u00f8n Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]Gr\u00f8nne Fingre Chance: [[YELLOW]]{0}
@@ -223,11 +223,11 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]Angrib med et modangreb!
 Swords.Combat.Countered=[[GREEN]]**MODANGREBET**
 Swords.Combat.SS.Struck=[[DARK_RED]]Ramt af F\u00e6gtekunstens S\u00e5r!
 Swords.Effect.0=Modangreb
-Swords.Effect.1=Reflekter 50% af den skade du tager
+Swords.Effect.1=Reflect {0} of damage taken
 Swords.Effect.2=F\u00e6gteKunst (Evne)
-Swords.Effect.3=25% skade af omr\u00e5de af effekt, Bl\u00f8de+ omr\u00e5de af effekt
+Swords.Effect.3={0} DMG AoE, Bleed+ AoE
 Swords.Effect.4=F\u00e6gteKunst Bl\u00f8dning+
-Swords.Effect.5=5 Tick Bl\u00f8dning
+Swords.Effect.5={0} Tick Bleed
 Swords.Effect.6=Bl\u00f8de
 Swords.Effect.7=S\u00e6t en Bl\u00f8dning med skade over tid (DoT=Skade over tid)
 Swords.Listener=Sv\u00e6rd:
@@ -242,13 +242,13 @@ Swords.SS.Length=[[RED]]F\u00e6gtekunstens L\u00e6ngde: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Omgivelses bevidst
 Taming.Ability.Bonus.1=Ulve undviger fare
 Taming.Ability.Bonus.2=Tyk Pels
-Taming.Ability.Bonus.3=1/2 Skade, Ild Modstand
+Taming.Ability.Bonus.3=1/{0} Damage, Fire Resistance
 Taming.Ability.Bonus.4=Shock Sikker
-Taming.Ability.Bonus.5=Eksplosioner g\u00f8r 1/6 af den normale skade
+Taming.Ability.Bonus.5=Explosives do 1/{0} normal damage
 Taming.Ability.Bonus.6=Sk\u00e6rpet Kl\u00f8er
-Taming.Ability.Bonus.7=+2 Skade
+Taming.Ability.Bonus.7=+{0} Damage
 Taming.Ability.Bonus.8=Fast Food Service
-Taming.Ability.Bonus.9={0}% Chance for at heale mens angrebet.
+Taming.Ability.Bonus.9={0} Chance for heal on attack
 Taming.Ability.Locked.0=L\u00c5ST INDTIL {0}+ EVNE (OMGIVELSES BEVIDST)
 Taming.Ability.Locked.1=L\u00c5ST INDTIL {0}+ EVNE (TYK PELS)
 Taming.Ability.Locked.2=L\u00c5ST INDTIL {0}+ EVNE (SHOCK SIKKER)
@@ -285,6 +285,7 @@ Unarmed.Ability.Bonus.0=Jern Arm Stil
 Unarmed.Ability.Bonus.1=+{0} DMG Upgradering
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Pile Undvignings Chance: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]Afv\u00e6bnings Chance: [[YELLOW]]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]Din modstander har et Jerngreb!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]Dit Jerngreb lod dig modst\u00e5 afv\u00e6bning!
 Unarmed.Ability.Lower=[[GRAY]]**DU S\u00c6NKER DINE N\u00c6VER**
@@ -297,6 +298,8 @@ Unarmed.Effect.4=Jern Arm Stil
 Unarmed.Effect.5=Forst\u00e6rker din arm over tiden
 Unarmed.Effect.6=Pile Undvigning
 Unarmed.Effect.7=Undvig Pile
+Unarmed.Effect.8=Iron Grip
+Unarmed.Effect.9=Prevents you from being disarmed
 Unarmed.Listener=Ubev\u00e6bnet:
 Unarmed.SkillName=UBEV\u00c6BNET
 Unarmed.Skills.Berserk.Off=[[RED]]**Berserker er nu aftaget**
@@ -371,7 +374,7 @@ Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rang [[WHITE]]#[[GR
 Commands.mcrank.Player=[[RED]]M\u00c5L: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rang [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Degraderet
-Commands.mcrefresh.Success=[[RED]]{0}\'\'s cooldowns have been refreshed.
+Commands.mcrefresh.Success=[[RED]]{0}\'\'s nedk\u00f8ling er blevet genindl\u00e6st.
 Commands.mcremove.Success=[[GREEN]]{0} er succesfuldt fjernet fra databasen!
 Commands.mctop.Tip=[[GOLD]]Tip: Brug [[RED]]/mcrank[[GOLD]] for at se all dine personlige rangs!
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - \u00c6ndrer m\u00e5let
@@ -492,7 +495,7 @@ Guides.Mining=[[DARK_AQUA]]Omkring Mining:\n[[YELLOW]]Mining best\u00e5r af at m
 Guides.Page.Invalid=Ikke et gyldigt side nummer!
 Guides.Page.OutOfRange=That page does not exist, there are only {0} total pages.
 Guides.Repair=[[DARK_AQUA]]About Repair:\n[[YELLOW]]Repair allows you to use an iron block to repair armor and\n[[YELLOW]]tools, or a gold block to salvage armor and tools.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]Repair tools or armor using the mcMMO Anvil. This is an\n[[YELLOW]]iron block by default and should not be confused with\n[[YELLOW]]the Vanilla Minecraft Anvil.\n[[DARK_AQUA]]How can I use Repair?\n[[YELLOW]]Place down a mcMMO Anvil and right-click to repair the item \n[[YELLOW]]you\'re currently holding. This consumes 1 item on every use.\n\n[[DARK_AQUA]]How does Repair Mastery work?\n[[YELLOW]]Repair Mastery increases the repair amount. The extra amount\n[[YELLOW]]repaired is influenced by your Repair skill level.\n\n[[DARK_AQUA]]How does Super Repair work?\n[[YELLOW]]Super Repair is a passive ability. When repairing an item,\n[[YELLOW]]it grants players a chance to repair an item with\n[[YELLOW]]double effectiveness.\n\n\n\n\n[[DARK_AQUA]]How does Arcane Forging work?\n[[YELLOW]]This passive ability allows you to repair items with a certain\n[[YELLOW]]chance of maintaining its enchantments. The enchants may be\n[[YELLOW]]kept at their existing levels, downgraded to a lower level,\n[[YELLOW]]or lost entirely.\n\n\n\n[[DARK_AQUA]]How does Salvage work?\n[[YELLOW]]Place down a mcMMO Salvage Anvil and right-click to salvage\n[[YELLOW]]the item you\'re currently holding.\n[[YELLOW]]This will break the item apart en give back the used ingots.\n[[YELLOW]]Note: You can only salvage fully repaired tools or armor.
-Guides.Swords=[[DARK_AQUA]]About Swords:\n[[YELLOW]]This skill awards combat bonuses to anyone fighting with a\n[[YELLOW]]sword.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]XP is gained based on the amount of damage dealt to mobs or \n[[YELLOW]]other players when wielding a sword.\n\n[[DARK_AQUA]]How does Serrated Strikes work?\n[[YELLOW]]Serrated Strikes is an active ability, you can activate it by\n[[YELLOW]]right-clicking with a sword. This ability allows you to deal \n[[YELLOW]]an AoE (Area of Effect) hit. This AoE will do a bonus 25%\n[[YELLOW]]damage and will inflict a bleed effect that lasts for 5 ticks.\n\n\n\n[[DARK_AQUA]]How does Counter Attack work?\n[[YELLOW]]Counter Attack is a passive ability. When taking hits from mobs,\n[[YELLOW]]you will have a chance to reflect 50% of the damage that was \n[[YELLOW]]taken.\n\n\n\n\n[[DARK_AQUA]]How does Bleed work?\n[[YELLOW]]Bleed causes enemies to take damage every two seconds. The \n[[YELLOW]]target will bleed until the effect wears off, or death, \n[[YELLOW]]whichever comes first.\n[[YELLOW]]The duration of the bleed is increased by your sword skill.
+Guides.Swords=[[DARK_AQUA]]Omkring Sv\u00e6rd:\n[[YELLOW]]Denne evne giver kamp bonuser til alle som k\u00e6mper med et\n[[YELLOW]]sv\u00e6rd.\n[[DARK_AQUA]]F\u00e5 XP:\n[[YELLOW]]Du f\u00e5r XP baseret p\u00e5 den m\u00e6ngde skade du giver til kreaturer eller \n[[YELLOW]]andre spillere mens du bruger sv\u00e6rd.\n[[DARK_AQUA]]Hvordan virker F\u00e6gteKunst?\n[[YELLOW]]F\u00e6gteKunst er en aktiv evne, do kan aktivere den ved at\n[[YELLOW]]h\u00f8jre-klikke med et sv\u00e6rd. Denne evne tillader dig at give \n[[YELLOW]]et OaE (Omr\u00e5de af Effekt) slag. Denne OaE vil give en bonus p\u00e5 25%\n[[YELLOW]]skade og vil give en bl\u00f8dning som varer i 5 ticks.\n[[DARK_AQUA]]Hvordan cirker ModAngreb?\n[[YELLOW]]ModAngreb er en passiv evne. n\u00e5r du bliver angrebet af kreaturer,\n[[YELLOW]]vil du have en chance for at modst\u00e5 50% af skaden som blev \n[[YELLOW]]givet.\n[[DARK_AQUA]]Hvordan virker Bl\u00f8dning?\n[[YELLOW]]Bl\u00f8dning f\u00e5r fjender til at tage skade hvert andet sekund. \n[[YELLOW]]M\u00e5let vil bl\u00f8de indtil effekten aftager, eller de d\u00f8r, \n[[YELLOW]]Hvad der nu kommer f\u00f8rst.\n[[YELLOW]]L\u00e6ngden af bl\u00f8dningen bliver st\u00f8rre desto st\u00f8rre sv\u00e6rd evne du har.
 Guides.Taming=[[DARK_AQUA]]About Taming:\n[[YELLOW]]Taming will give players various combat bonuses when using\n[[YELLOW]]tamed wolves.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]To gain XP in this skill, you need to tame wolves/ocelots or\n[[YELLOW]]get into combat with your wolves.\n\n[[DARK_AQUA]]How does Call of the Wild work?\n[[YELLOW]]Call of the Wild is an active ability that will allow you to summon\n[[YELLOW]]a wolf or an ocelot by your side. You can do this by\n[[YELLOW]]left-clicking while holding bones or fish.\n\n[[DARK_AQUA]]How does Beast Lore work?\n[[YELLOW]]Beast Lore allows players to inspect pets and to check the\n[[YELLOW]]stats of wolves and ocelots. Left-click a wolf or ocelot to use\n[[YELLOW]]Beast Lore.\n[[DARK_AQUA]]How does Gore work?\n[[YELLOW]]Gore is a passive ability that has a chance of inflicting a\n[[YELLOW]]bleeding effect on your wolves\' targets.\n\n[[DARK_AQUA]]How does Sharpened Claws work?\n[[YELLOW]]Sharpened Claws provides a damage bonus to damage dealt\n[[YELLOW]]by wolves. The damage bonus depends on your Taming level.\n\n[[DARK_AQUA]]How does Environmentally Aware work?\n[[YELLOW]]This passive ability will allow wolves to teleport to you when\n[[YELLOW]]they get near hazards, such as Cacti/Lava. It will also give\n[[YELLOW]]wolves fall damage immunity.\n\n[[DARK_AQUA]]How does Thick Fur work?\n[[YELLOW]]This passive ability will reduce damage and make wolves\n[[YELLOW]]fire resistant.\n[[DARK_AQUA]]How does Shock Proof work?\n[[YELLOW]]This passive ability reduces damage done to wolves\n[[YELLOW]]from explosions.\n[[DARK_AQUA]]How does Fast Food Service work?\n[[YELLOW]]This passive ability gives wolves a chance to heal whenever\n[[YELLOW]]they perform an attack.
 Guides.Unarmed=[[DARK_AQUA]]About Unarmed:\n[[YELLOW]]Unarmed will give players various combat bonuses when using\n[[YELLOW]]your fists as a weapon. \n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]XP is gained based on the amount of damage dealt to mobs \n[[YELLOW]]or other players when unarmed.\n\n[[DARK_AQUA]]How does Berserk work?\n[[YELLOW]]Beserk is an active ability that is activated by\n[[YELLOW]]right-clicking. While in Beserk mode, you deal 50% more\n[[YELLOW]]damage and you can break weak materials instantly, such as\n[[YELLOW]]Dirt and Grass.\n[[DARK_AQUA]]How does Iron Arm work?\n[[YELLOW]]Iron Arm increases the damage dealt when hitting mobs or\n[[YELLOW]]players with your fists.\n[[DARK_AQUA]]How does Arrow Deflect work?\n[[YELLOW]]Arrow Deflect is a passive ability that gives you a chance\n[[YELLOW]]to deflect arrows shot by Skeletons or other players.\n[[YELLOW]]The arrow will fall harmlessly to the ground.\n\n[[DARK_AQUA]]How does Iron Grip work?\n[[YELLOW]]Iron Grip is a passive ability that counters disarm. As your\n[[YELLOW]]unarmed level increases, the chance of preventing a disarm increases.\n[[DARK_AQUA]]How does Disarm work?\n[[YELLOW]]This passive ability allows players to disarm other players,\n[[YELLOW]]causing the target\'s equipped item to fall to the ground.
 Guides.Usage=[[RED]] Korrekt brug er /{0} ? [page]
@@ -526,7 +529,7 @@ Perks.activationtime.desc=Forl\u00e6nger evne aktivations tid med {0} sekunder
 Perks.activationtime.bonus=[[GOLD]] ({0}s med Udholdenheds Frynsegode)
 Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]You have lost [[BLUE]]{0}[[DARK_RED]] from death.
 Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] havde ikke evner nom til at give dig nogen viden.
-Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]You have stolen [[BLUE]]{0}[[DARK_AQUA]] levels from [[YELLOW]]{1}.
+Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Du har stj\u00e5let [[BLUE]]{0}[[DARK_AQUA]] levels fra [[YELLOW]]{1}.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] var ikke i stand til at stj\u00e6le viden fra dig!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] har stj\u00e5let [[BLUE]]{1}[[DARK_RED]] levels fra dig!
 Spout.Donate=[[YELLOW]][mcMMO] Doner!
