--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -19,7 +19,7 @@ Archery.Combat.SkillshotBonus=[[RED]]Tir pr\u00e9cis, bonus de d\u00e9g\u00e2ts 
 Archery.Effect.0=Tir pr\u00e9cis
 Archery.Effect.1=Augmente les d\u00e9g\u00e2ts inflig\u00e9s
 Archery.Effect.2=[[RED]]Chance de d\u00e9sorienter : [[YELLOW]]{0}%
-Archery.Effect.3=D\u00e9soriente les ennemis et inflige 4 points de d\u00e9g\u00e2ts
+Archery.Effect.3=Disorients foes and deals {0} DMG
 Archery.Effect.4=R\u00e9cup\u00e9ration de fl\u00e8che
 Archery.Effect.5=Probabilit\u00e9 de r\u00e9cup\u00e9rer des fl\u00e8ches sur les corps
 Archery.Listener=Archerie :
@@ -86,15 +86,15 @@ Fishing.Effect.4=Secousse (sur monstres)
 Fishing.Effect.5=Fait tomber des objets des monstres avec une canne \u00e0 p\u00eache
 Fishing.Effect.6=Fisherman\'s Diet
 Fishing.Effect.7=Improves hunger restored from fished foods
-Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
+Fishing.Enchant.Chance=[[RED]]Chasse magique: [[YELLOW]]{0}
 Fishing.Chance.Raining=[[BLUE]] Rain Bonus
 Fishing.ItemFound=[[GRAY]]Tr\u00e9sor d\u00e9couvert !
 Fishing.Listener=P\u00eache :
 Fishing.MagicFound=[[GRAY]]Vous ressentez quelque chose de magique dans cette prise...
 Fishing.SkillName=P\u00caCHE
 Fishing.Skillup=[[YELLOW]]Le talent p\u00eache augmente de {0}. Total ({1})
-Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
-Herbalism.Ability.FD=[[RED]]R\u00e9gime de fermier : [[YELLOW]]Rang {0}
+Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop: [[YELLOW]]{0}
+Herbalism.Ability.FD=[[RED]]Farmer\'\'s Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Dur\u00e9e de Main verte : [[YELLOW]]{0}s
 Herbalism.Ability.GTe.NeedMore=[[RED]]You need more seeds to spread Green Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
@@ -108,8 +108,8 @@ Herbalism.Effect.0=Main verte (Comp\u00e9tence)
 Herbalism.Effect.1=Propage les plantes / triple drops
 Herbalism.Effect.2=Doigts verts (Wheat)
 Herbalism.Effect.3=Auto-Plants crops when harvesting
-Herbalism.Effect.4=Green Thumb (Cobble/Stone Brick/Dirt)
-Herbalism.Effect.5=Make bricks mossy, or make grass grow
+Herbalism.Effect.4=Pouce Vert (Cobble/Stone Brick/Dirt)
+Herbalism.Effect.5=Faire des briques avec mousse ou faire pousser l\'herbe
 Herbalism.Effect.6=R\u00e9gime de fermier
 Herbalism.Effect.7=Am\u00e9liore la nutrition des produits de la ferme
 Herbalism.Effect.8=Double drops
@@ -141,8 +141,8 @@ Mining.Effect.6=Grosses explosions
 Mining.Effect.7=Augmente le rayon d\'explosion de la TNT
 Mining.Effect.8=Expert en d\u00e9molition
 Mining.Effect.9=R\u00e9duit les d\u00e9g\u00e2ts provenant de la TNT
-Mining.Effect.Decrease=[[RED]]Demolitions Expert Damage Decrease: [[YELLOW]]{0}
-Mining.Effect.DropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
+Mining.Effect.Decrease=[[RED]]Baisse de l\'expertise en d\u00e9molition: [[YELLOW]]{0}
+Mining.Effect.DropChance=[[RED]]Double Drop: [[YELLOW]]{0}
 Mining.Listener=Minage :
 Mining.SkillName=MINAGE
 Mining.Skills.SuperBreaker.Off=[[RED]]**Votre comp\u00e9tence Broyeur est termin\u00e9e**
@@ -167,13 +167,13 @@ Mining.Blast.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Minage Explosif[[G
 Repair.AnvilPlaced.Spout1=[mcMMO] Anvil Placed
 Repair.AnvilPlaced.Spout2=Right click to repair!
 Repair.Effect.0=R\u00e9paration
-Repair.Effect.1=Repair Tools & Armor
-Repair.Effect.10=Gold Repair ({0}+ SKILL)
-Repair.Effect.11=Repair Gold Tools & Armor
-Repair.Effect.12=Iron Repair ({0}+ SKILL)
-Repair.Effect.13=Repair Iron Tools & Armor
-Repair.Effect.14=Stone Repair ({0}+ SKILL)
-Repair.Effect.15=Repair Stone Tools
+Repair.Effect.1=R\u00e9parer Outils & Armures
+Repair.Effect.10=R\u00e9paration d\'Or ({0}+ SKILL)
+Repair.Effect.11=R\u00e9parer Outils & Armures en Or
+Repair.Effect.12=R\u00e9paration en Fer ({0}+ SKILL)
+Repair.Effect.13=R\u00e9paration Outils & Armures en Fer
+Repair.Effect.14=R\u00e9paration en Pierre ({0}+ SKILL)
+Repair.Effect.15=R\u00e9parer Outils en Pierre
 Repair.Effect.2=Ma\u00eetrise du forgeage
 Repair.Effect.3=Am\u00e9liore la r\u00e9paration
 Repair.Effect.4=Superbe r\u00e9paration
@@ -199,7 +199,7 @@ Repair.Skills.FeltEasy=[[GRAY]]Plut\u00f4t facile.
 Repair.Skills.FullDurability=[[GRAY]]C\'est d\u00e9j\u00e0 r\u00e9par\u00e9.
 Repair.Skills.SalvageSuccess=[[GRAY]]Item salvaged!
 Repair.Skills.NotFullDurability=[[DARK_RED]]You can\'t salvage damaged items.
-Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0} durability restored
+Repair.Skills.Mastery=[[RED]]Maitrise en r\u00e9paration: [[YELLOW]]Extra {0} durabilit\u00e9 en place
 Repair.Skills.StackedItems=[[DARK_RED]]Vous ne pouvez pas r\u00e9parer les objets empil\u00e9s.
 Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]Le talent R\u00e9paration augmente de {0}. Total ({1})
@@ -212,7 +212,7 @@ Repair.Arcane.Perfect=[[GREEN]]Vous avez pr\u00e9serv\u00e9 les \u00e9nergies ar
 Repair.Arcane.Rank=[[RED]]Forge arcanique : [[YELLOW]]Rang {0}/4
 Swords.Ability.Lower=[[GRAY]]**VOUS ABAISSEZ VOTRE \u00c9P\u00c9E**
 Swords.Ability.Ready=[[GREEN]]**VOUS LEVEZ VOTRE \u00c9P\u00c9E**
-Swords.Combat.Bleed.Chance=[[RED]]Bleed Chance: [[YELLOW]]{0}
+Swords.Combat.Bleed.Chance=[[RED]]Saignement: [[YELLOW]]{0}
 Swords.Combat.Bleed.Length=[[RED]]Dur\u00e9e de saignement : [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTE : [[YELLOW]]1 tick toutes les 2 secondes
 Swords.Combat.Bleeding.Started=[[DARK_RED]] You\'re bleeding!
@@ -223,11 +223,11 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]Touch\u00e9 par une contre-attaque !
 Swords.Combat.Countered=[[GREEN]]**CONTRE-ATTAQUE**
 Swords.Combat.SS.Struck=[[DARK_RED]]Frapp\u00e9 par ATTAQUE D\u00c9CHIRANTE !
 Swords.Effect.0=Contre-attaque
-Swords.Effect.1=Renvoie 50% des d\u00e9g\u00e2ts re\u00e7us
+Swords.Effect.1=Reflect {0} of damage taken
 Swords.Effect.2=Attaque d\u00e9chirante (Comp\u00e9tence)
-Swords.Effect.3=25% de d\u00e9g\u00e2ts + saignement de zone
+Swords.Effect.3={0} DMG AoE, Bleed+ AoE
 Swords.Effect.4=Saignement d\'Attaque d\u00e9chirante
-Swords.Effect.5=5 ticks
+Swords.Effect.5={0} Tick Bleed
 Swords.Effect.6=Saignement
 Swords.Effect.7=Applique un saignement
 Swords.Listener=\u00c9p\u00e9es :
@@ -242,13 +242,13 @@ Swords.SS.Length=[[RED]]Dur\u00e9e d\'Attaque d\u00e9chirante : [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Attentif \u00e0 l\'environnement
 Taming.Ability.Bonus.1=Les loups \u00e9vitent les dangers
 Taming.Ability.Bonus.2=Fourrure \u00e9paisse
-Taming.Ability.Bonus.3=D\u00e9g\u00e2ts r\u00e9duits de moiti\u00e9, r\u00e9sistance au feu
+Taming.Ability.Bonus.3=1/{0} Damage, Fire Resistance
 Taming.Ability.Bonus.4=R\u00e9sistance aux chocs
-Taming.Ability.Bonus.5=Les explosifs font 1/6\u00e8me de leurs d\u00e9g\u00e2ts
+Taming.Ability.Bonus.5=Explosives do 1/{0} normal damage
 Taming.Ability.Bonus.6=Griffes ac\u00e9r\u00e9es
-Taming.Ability.Bonus.7=+2 de d\u00e9g\u00e2ts
+Taming.Ability.Bonus.7=+{0} Damage
 Taming.Ability.Bonus.8=Fast food
-Taming.Ability.Bonus.9={0}% Chance for heal on attack
+Taming.Ability.Bonus.9={0} Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
@@ -283,8 +283,9 @@ Taming.Summon.Fail.Wolf=[[RED]]Il y a d\u00e9j\u00e0 trop de loups dans les envi
 Unarmed.Ability.Berserk.Length=[[RED]]Dur\u00e9e de Berserk : [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=Poings de fer
 Unarmed.Ability.Bonus.1=+{0} de d\u00e9g\u00e2ts
-Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Arrow Deflect Chance: [[YELLOW]]{0}
+Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Rejet de fl\u00e8che: [[YELLOW]]{0}
 Unarmed.Ability.Chance.Disarm=[[RED]]Disarm Chance: [[YELLOW]]{0}
+Unarmed.Ability.Chance.IronGrip=[[RED]]Iron Grip Chance: [[YELLOW]{0}
 Unarmed.Ability.IronGrip.Attacker=[[RED]]Your opponent has an iron grip!
 Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being disarmed!
 Unarmed.Ability.Lower=[[GRAY]]**VOUS ABAISSEZ VOS POINGS**
@@ -297,6 +298,8 @@ Unarmed.Effect.4=Poings de fer
 Unarmed.Effect.5=Durcit vos poings au fil du temps
 Unarmed.Effect.6=D\u00e9viation de fl\u00e8che
 Unarmed.Effect.7=D\u00e9vie les fl\u00e8ches
+Unarmed.Effect.8=Iron Grip
+Unarmed.Effect.9=Prevents you from being disarmed
 Unarmed.Listener=Poings :
 Unarmed.SkillName=POINGS
 Unarmed.Skills.Berserk.Off=[[RED]]**Votre comp\u00e9tence Berserk est termin\u00e9e**
@@ -307,7 +310,7 @@ Unarmed.Skills.Berserk.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Berserk 
 Unarmed.Skillup=[[YELLOW]]Le talent Poings augmente de {0}. Total ({1})
 Woodcutting.Ability.0=Soufflage
 Woodcutting.Ability.1=Cong\u00e9s de coup
-Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}
+Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]Dur\u00e9e d\'Abbateur : [[YELLOW]]{0}s
 Woodcutting.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (LEAF BLOWER)
 Woodcutting.Effect.0=Abatteur (Comp\u00e9tence)
@@ -497,7 +500,7 @@ Guides.Taming=[[DARK_AQUA]]About Taming:\n[[YELLOW]]Taming will give players var
 Guides.Unarmed=[[DARK_AQUA]]About Unarmed:\n[[YELLOW]]Unarmed will give players various combat bonuses when using\n[[YELLOW]]your fists as a weapon. \n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]XP is gained based on the amount of damage dealt to mobs \n[[YELLOW]]or other players when unarmed.\n\n[[DARK_AQUA]]How does Berserk work?\n[[YELLOW]]Beserk is an active ability that is activated by\n[[YELLOW]]right-clicking. While in Beserk mode, you deal 50% more\n[[YELLOW]]damage and you can break weak materials instantly, such as\n[[YELLOW]]Dirt and Grass.\n[[DARK_AQUA]]How does Iron Arm work?\n[[YELLOW]]Iron Arm increases the damage dealt when hitting mobs or\n[[YELLOW]]players with your fists.\n[[DARK_AQUA]]How does Arrow Deflect work?\n[[YELLOW]]Arrow Deflect is a passive ability that gives you a chance\n[[YELLOW]]to deflect arrows shot by Skeletons or other players.\n[[YELLOW]]The arrow will fall harmlessly to the ground.\n\n[[DARK_AQUA]]How does Iron Grip work?\n[[YELLOW]]Iron Grip is a passive ability that counters disarm. As your\n[[YELLOW]]unarmed level increases, the chance of preventing a disarm increases.\n[[DARK_AQUA]]How does Disarm work?\n[[YELLOW]]This passive ability allows players to disarm other players,\n[[YELLOW]]causing the target\'s equipped item to fall to the ground.
 Guides.Usage=[[RED]] Usage is /{0} ? [page]
 Guides.Woodcutting=[[DARK_AQUA]]About Woodcutting:\n[[YELLOW]]Woodcutting is all about chopping down trees.\n\n[[DARK_AQUA]]XP GAIN:\n[[YELLOW]]XP is gained whenever you break log blocks.\n\n\n\n[[DARK_AQUA]]How does Tree Feller work?\n[[YELLOW]]Tree Feller is an active ability, you can right-click\n[[YELLOW]]while holding an ax to activate Tree Feller. This will\n[[YELLOW]]cause the entire tree to break instantly, dropping all\n[[YELLOW]]of its logs at once.\n\n\n\n[[DARK_AQUA]]How does Leaf Blower work?\n[[YELLOW]]Leaf Blower is a passive ability that will cause leaf\n[[YELLOW]]blocks to break instantly when hit with an axe. By default,\n[[YELLOW]]this ability unlocks at level 100.\n\n[[DARK_AQUA]]How do Double Drops work?\n[[YELLOW]]This passive ability gives you a chance to obtain an extra\n[[YELLOW]]block for every log you chop.
-Inspect.Offline=[[RED]]You do not have permission to inspect offline players!
+Inspect.Offline=[[RED]]Tu n\'as pas la permission d\'inspecter un joueur hors ligne!
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]Vous \u00eates trop \u00e9loign\u00e9 de ce joueur pour l\'inspecter !
